# vino_24

./: .gitignore  CMakeLists.txt  README.md  readerme.md
.cache/clangd/index/: inference.cpp.9C4611159B3D61E4.idx  inference.hpp.D269E5F0EAF1A2A4.idx  video_detect_test.cpp.1664C15986951384.idx  visible.cpp.FDC2C7E4A00D4EAE.idx  visible.hpp.19C57A0BB477C63B.idx
include/: inference.hpp  visible.hpp
src/: inference.cpp  video_detect_test.cpp  visible.cpp
